--- a/src/app/pages/payrollprocess/loans/outstanding/outstanding.html
+++ b/src/app/pages/payrollprocess/loans/outstanding/outstanding.html
@@ -1,8 +1,8 @@
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
         <div class="panel-body">
-            <div ui-grid="gridOptions" class="">
+            <div ui-grid="gridOptions"  class="">
             </div>
         </div>
     </div>
-</div>
+</div>y
