--- a/src/app/pages/finances/prefrences/prefrences.html
+++ b/src/app/pages/finances/prefrences/prefrences.html
@@ -18,13 +18,13 @@
                                     <div class="col-sm-6 clear-side-padding">
                                         <div class="col-sm-8 clear-left-padding">
                                             <label class="title upper-case">Name on Pan Card</label>
-                                            <p class="clear-bottom ng-binding"></p>
+                                            <p class="clear-bottom ng-binding">{{frefencesList.PdNameOnPanCard}}</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-6 clear-side-padding">
                                         <div class="col-sm-8 clear-left-padding">
                                             <label class="title upper-case">PAN Number</label>
-                                            <p class="clear-bottom ng-binding"></p>
+                                            <p class="clear-bottom ng-binding">{{frefencesList.PDPanCard}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -193,13 +193,13 @@
                                     <div class="col-sm-6 clear-side-padding">
                                         <div class="col-sm-8 clear-left-padding">
                                             <label class="title upper-case">Name On Aadhaar Card</label>
-                                            <p class="clear-bottom ng-binding"></p>
+                                            <p class="clear-bottom ng-binding">{{frefencesList.PdNameOnAdharCard}}</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-6 clear-side-padding">
                                         <div class="col-sm-8 clear-left-padding">
                                             <label class="title upper-case">Aadhaar Number</label>
-                                            <p class="clear-bottom ng-binding">{{}}</p>
+                                            <p class="clear-bottom ng-binding">{{frefencesList.PDAdhar}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -207,7 +207,7 @@
                                     <div class="col-sm-8 clear-side-padding">
                                         <div class="col-sm-8 clear-left-padding">
                                             <label class="title upper-case">Enrollment Number</label>
-                                            <p class="clear-bottom ng-binding">{{}}</p>
+                                            <p class="clear-bottom ng-binding">{{frefencesList.PdAdharEnrollmentNumber}}</p>
                                         </div>
                                     </div>
                                 </div>
