--- a/src/app/pages/directory/empdashboard/empdashboard.html
+++ b/src/app/pages/directory/empdashboard/empdashboard.html
@@ -340,7 +340,7 @@
                             <a data-ui-sref="employees.reports.pendingregistrations" href="#/employees/reports/pendingregistrations">Pending Registrations</a>
                         </li>
                         <li>
-                            <a data-ui-sref="employees.reports.uninvited" href="#/employees/reports/uninvitedemployees">Uninvited Employees</a>
+                            <a data-ui-sref="directory.dashboard.hasleft" href="#/employees/reports/uninvitedemployees">Uninvited Employees</a>
                         </li>
                         <li>
                             <a data-ui-sref="employees.reports.neverloggedin" href="#/employees/reports/neverloggedin">Never Logged in</a>
@@ -418,19 +418,52 @@
             <div ba-panel ba-panel-title=" REPORTS: EMPLOYEE STATUS" ba-panel-class=" medium-panel feed-comply-panel with-scroll todo-panel">
                 <ul class="report-info-list">
                     <li>
-                        <a data-ui-sref="employees.reports.all" href="#/employees/reports/all">All Employees</a>
+                        <a data-ui-sref="directory.dashboard.fulldetail" >All Employees</a>
+                    </li>
+
+                    <li>
+                        <a data-ui-sref="directory.dashboard.department" >Department-Wise</a>
                     </li>
                     <li>
-                        <a data-ui-sref="employees.reports.registered" href="#/employees/reports/registeredemployees">Registered Employees</a>
+                        <a data-ui-sref="directory.dashboard.gradeandlevel" >Grade And Level-Wise</a>
                     </li>
                     <li>
-                        <a data-ui-sref="employees.reports.invitations" href="#/employees/reports/invitations">Invited Employees</a>
+                        <a data-ui-sref="directory.dashboard.hasleft" >Exit Employee</a>
                     </li>
                     <li>
-                        <a data-ui-sref="employees.reports.pendingregistrations" href="#/employees/reports/pendingregistrations">Pending Registrations</a>
+                        <a data-ui-sref="directory.dashboard.job" >Jod Description</a>
                     </li>
                     <li>
-                        <a data-ui-sref="employees.reports.uninvited" href="#/employees/reports/uninvitedemployees">Uninvited Employees</a>
+                        <a data-ui-sref="directory.dashboard.provisional" >Provisional</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.reportingmanager" >Reporting Manager</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.role">Employee Roles</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.shift" >Shift Detail</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.withoutreportingmanager" >With Out Reporting Manager</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.worktype" >Work Type</a>
+                    </li>
+                    
+
+                    <li>
+                        <a data-ui-sref="employees.reports.registered">Registered Employees</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="employees.reports.invitations">Invited Employees</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="employees.reports.pendingregistrations" >Pending Registrations</a>
+                    </li>
+                    <li>
+                        <a data-ui-sref="directory.dashboard.hasleft" href="#/employees/reports/uninvitedemployees">Uninvited Employees</a>
                     </li>
                     <li>
                         <a data-ui-sref="employees.reports.neverloggedin" href="#/employees/reports/neverloggedin">Never Logged in</a>
