--- a/src/app/pages/payrollprocess/overview/reviewallemp/review.html
+++ b/src/app/pages/payrollprocess/overview/reviewallemp/review.html
@@ -1,20 +1,26 @@
 <div class="modal-content">
     <div class="modal-header bg-primary title-bar">
         <div class="col-lg-12">
-            <!-- <p class="text-center">New Loan- Name Of Employee</p> -->
-            <div id="status-buttons" class="text-center">
+            <p class="text-center">
+                <b> {{modalTitle}}</b>
+            </p>
+            <!-- <div id="status-buttons" class="text-center">
                 <a ng-init="value=1" ng-click="value=1" ng-class="{active:value==1}">
                     <span>1</span>Leave Applied</a>
                 <a ng-click="value=2" ng-class="{active:value==2}">
                     <span>2</span> CompOff Applied</a>
 
-            </div>
+            </div> -->
             <span data-ng-click="$dismiss();" class="pull-right">
                 <i class="fa fa-times"></i>
             </span>
         </div>
     </div>
     <div class="modal-body">
-        <h1>hello</h1>
+        <div class="col-lg-12">
+            
+            <div ui-grid="gridReviewAllEmpOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
+                ui-grid-edit class="paybandgrid payband" ng-style="{height:height}"></div>
+        </div>
     </div>
 </div>
