--- a/src/app/pages/directory/empdashboard/report/hasleft/hasleft.html
+++ b/src/app/pages/directory/empdashboard/report/hasleft/hasleft.html
@@ -1,36 +1,51 @@
 <div class="modal-content">
     <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" dotranslate>Pay Slip</h3>
+        <h3 class="inline-block clear-vertical-margin" dotranslate>Exit And Active Employee</h3>
     </div>
     <div class="modal-body content-container">
         <form name="leaveDetail" id="leaveDetail" novalidate>
             <div class="row">
-                <div class="col-sm-8">
-
-
+                <div class="col-sm-12">
                     <div class="col-sm-12">
+                        <div class="col-sm-3">
+                            <label dotranslate ng-bind="selectedDropDown.pageinfo.fields.IsHasLeft.text">
+                                *
+                            </label>
+                            <select class="form-control input-sm" ng-model="entity.IsHasLeft" ng-options="hasleft.value as hasleft.name for hasleft in selectedDropDown.pageinfo.selects.IsHasLeft"></select>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="form-group">
+                                <label dotranslate>From Date</label>
+                                <div class="input-group" moment-picker="entity.FromDate" format="DD-MMM-YYYY">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input class="form-control" placeholder="Pick any Date" ng-model="entity.FromDate" ng-model-options="{ updateOn: 'blur' }">
+                                </div>
+                            </div>
+                        </div>
 
-                        <div class="col-sm-4">
-                            <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="month" ng-options="monthL.Id as monthL.Name for monthL in monthlySummery.monthList"></select>
+                        <div class="col-sm-3">
+                            <div class="form-group">
+                                <label dotranslate>To Time</label>
+                                <div class="input-group" moment-picker="entity.ToDate" format="DD-MMM-YYYY">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input class="form-control" placeholder="Pick any Date" ng-model="entity.ToDate" ng-model-options="{ updateOn: 'blur' }">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4">
-                            <select class="form-control input-sm" ng-change="employeeSalary()" ng-model="years" ng-options="yearL.Id as yearL.Name for yearL in monthlySummery.yearList"></select>
-                        </div>
-                        <!-- <div class="col-sm-4">
-                            <button type="submit" class="btn input-sm btn-success" ng-click="downLoadPdf();" dotranslate>Search</button>
-                        </div> -->
                     </div>
-
-
                 </div>
 
-                <div class="col-sm-4">
-                </div>
+                <!-- <div class="col-sm-4">
+                </div> -->
 
                 <div class="row">
                     <div class="col-sm-12 vertical-margin">
                         <div class="col-sm-6 pull-right text-right">
-                            <button type="submit" class="btn btn-success" ng-click="downLoadPdf();" dotranslate>Apply Out-Duty</button>
+                            <button type="submit" class="btn btn-success" ng-click="downLoadPdf();" dotranslate>Search</button>
                             <a class="btn btn-cancel" ng-click="$dismiss();">Cancel</a>
                         </div>
                     </div>
